Add security pages news feeds for solr, core, and tlp

--- a/themes/lucene/templates/lucene/core/_sidebar.html
+++ b/themes/lucene/templates/lucene/core/_sidebar.html
@@ -25,6 +25,7 @@
 <ul>
   <li><a href="https://www.apache.org/licenses/">License</a></li>
   <li><a href="{{ SITEURL }}/whoweare.html">Who We are</a></li>
+  <li><a href="{{ SITEURL }}/security.html">Security</a></li>
 </ul>
 
 <h1 id="events">Events</h1>
