Solr news: Show all in one page, fix anchor on mouse hover Add link to TLP news in main sidebar

--- a/themes/lucene/templates/lucene/tlp/index.html
+++ b/themes/lucene/templates/lucene/tlp/index.html
@@ -5,7 +5,7 @@
 
 <p>
   The Apache Lucene<span style="vertical-align: super; font-size: xx-small">TM</span> project develops open-source search
-  software. The project releases a core search library, named Lucene <span style="vertical-align: super; font-size: xx-small">TM</span>,
+  software. The project releases a core search library, named Lucene<span style="vertical-align: super; font-size: xx-small">TM</span> core,
   as well as the Solr<span style="vertical-align: super; font-size: xx-small">TM</span> search server.
 </p>
 
