SOLR-13910 Security feed for Solr

--- a/themes/lucene/static/css/lucene/global.css
+++ b/themes/lucene/static/css/lucene/global.css
@@ -779,6 +779,10 @@ h2:hover > .headerlink, h3:hover > .headerlink, h1:hover > .headerlink, h6:hover
     visibility: visible
 }
 
+.security {
+    background: #ffdddd !important;
+}
+
 /********************************
  Page Specific Styles
 ********************************/
