--- a/themes/lucene/templates/lucene/tlp/index.html
+++ b/themes/lucene/templates/lucene/tlp/index.html
@@ -41,9 +41,13 @@
   </p>
   <h2 id="solr-news">Latest Solr News</h2>
   <div>
-    {% for article in (articles | selectattr("category.name", "eq", "solr/news")|list)[:3] %}
+    {% for article in (articles | selectattr("category.name", "in", ['solr/news', 'solr/security'])|list)[:3] %}
     <p id="{{article.slug}}">
+      {% if article.category.name == 'solr/security' %}
+      <a href="/solr/security.html#{{article.slug}}" class="security">{{article.title}}</a>
+      {% else %}
       <a href="/solr/news.html#{{article.slug}}">{{article.title}}</a>
+      {% endif %}
     </p>
     {% endfor %}
   </div>
