--- a/themes/lucene/templates/solr/news.html
+++ b/themes/lucene/templates/solr/news.html
@@ -16,7 +16,7 @@
   <h1 id="solr-news">Solr<sup>™</sup> News<a class="headerlink" href="#solr-news" title="Permanent link">¶</a></h1>
   {{page.content}}
 
-  {% for article in (articles | selectattr("category.name", "eq", "solr/news")|list) %}
+  {% for article in (articles | selectattr("category.name", "in", ['solr/news', 'solr/security'])|list) %}
   <h2 id="{{ article.slug }}">{{ article.locale_date }}, {{ article.title }}
     <a class="headerlink" href="#{{article.slug}}" title="Permanent link">¶</a>
   </h2>
