--- a/themes/lucene/templates/lucene/tlp/index.html
+++ b/themes/lucene/templates/lucene/tlp/index.html
@@ -23,7 +23,7 @@
   <div>
     {% for article in (articles | selectattr("category.name", "eq", "core/news")|list)[:3] %}
     <p id="{{article.slug}}">
-      <a href="/core/corenews.html#{{article.slug}}">{{article.title}}</a>
+      <a href="/core/corenews.html#{{article.slug}}">{{article.title}}</a> ({{ article.date | strftime("%d.%b") }})
     </p>
     {% endfor %}
   </div>
@@ -44,9 +44,9 @@
     {% for article in (articles | selectattr("category.name", "in", ['solr/news', 'solr/security'])|list)[:3] %}
     <p id="{{article.slug}}">
       {% if article.category.name == 'solr/security' %}
-      <a href="/solr/security.html#{{article.slug}}" class="security">{{article.title}}</a>
+      <a href="/solr/security.html#{{article.slug}}" class="security">{{article.title}}</a> ({{ article.date | strftime("%d.%b") }})
       {% else %}
-      <a href="/solr/news.html#{{article.slug}}">{{article.title}}</a>
+      <a href="/solr/news.html#{{article.slug}}">{{article.title}}</a> ({{ article.date | strftime("%d.%b") }})
       {% endif %}
     </p>
     {% endfor %}
