--- a/themes/lucene/templates/solr/security.html
+++ b/themes/lucene/templates/solr/security.html
@@ -26,7 +26,7 @@
         <tr>
             <td><a href="https://nvd.nist.gov/vuln/detail/{{ article.cve }}">{{ article.cve }}</a></td>
             <td>{{ article.date | strftime("%Y-%m-%d") }}</td>
-            <td><a href="#{{ article.slug }}">{{ article.title }}</a></td>
+            <td><a href="#{{ article.slug }}">{{ article.title | regex_replace('^CVE.*?: ', '') }}</a></td>
         </tr>
         {% endfor %}
     </table>
