--- a/themes/lucene/static/css/lucene/global.css
+++ b/themes/lucene/static/css/lucene/global.css
@@ -783,6 +783,11 @@ h2:hover > .headerlink, h3:hover > .headerlink, h1:hover > .headerlink, h6:hover
     background: #ffdddd !important;
 }
 
+.news-date {
+    color: darkgrey;
+    font-size: x-small;
+}
+
 /********************************
  Page Specific Styles
 ********************************/
