--- a/themes/lucene/templates/solr/base.html
+++ b/themes/lucene/templates/solr/base.html
@@ -21,6 +21,9 @@
 
   <body class="page {% block bodyclass %}{% endblock %}" {% block ng_directives %}{% endblock %} x-ng-app="page" x-ng-controller="page.controllers.main">
     {% include "solr/_header.html" %}
+
+    {% block security_warning %}
+    {% endblock %}
     {% block hero_header %}
     {% endblock %}
     {% block content %}
