--- a/themes/lucene/templates/solr/index.html
+++ b/themes/lucene/templates/solr/index.html
@@ -2,8 +2,22 @@
 
 {% block bodyclass %}homepage{% endblock %}
 
+{% block security_warning %}
+<section class="security">
+  <div class="row">
+    <div class="large-12 columns text-center">
+      <h2>Recent security announcements</h2>
+      {% for article in (articles | selectattr("category.name", "eq", "solr/security")|list)[:2] %}
+      <div><a href="security.html">{{ article.date | strftime("%Y-%m-%d") }} - {{ article.title }}</a></div>
+      {% endfor %}
+    </div>
+  </div>
+</section>
+{% endblock %}
+
 {% block content_inner %}
 <section class="gray offset-medium" id="learn-more"></section>
+
 <section class="gray col-4">
   <div class="row">
     <div class="large-10 large-offset-1 columns">
