Do not list the CVEs on Solr homepage, but only a thin block with a link to Security page

--- a/themes/lucene/static/css/solr/base.css
+++ b/themes/lucene/static/css/solr/base.css
@@ -516,6 +516,8 @@ section.orange.full-width {
 
 .security {
   background-color: #cccc33;
+  padding-top: 10px;
+  padding-bottom: 0px;
 }
 
 .security a {
