Remove various Solr references. Add NOTE in README

--- a/themes/lucene/templates/lucene/core/_sidebar.html
+++ b/themes/lucene/templates/lucene/core/_sidebar.html
@@ -42,6 +42,7 @@
 
 <h1 id="related-projects">Related Projects</h1>
 <ul>
+  <li><a href="https://solr.apache.org">Apache Solr</a></li>
   <li><a href="http://hadoop.apache.org">Apache Hadoop</a></li>
   <li><a href="http://manifoldcf.apache.org/">Apache ManifoldCF</a></li>
   <li><a href="http://lucenenet.apache.org/">Apache Lucene.Net</a></li>
