--- a/themes/lucene/templates/lucene/pylucene/_sidebar.html
+++ b/themes/lucene/templates/lucene/pylucene/_sidebar.html
@@ -28,6 +28,7 @@
 
 <h1 id="related-projects">Related Projects<a class="headerlink" href="#related-projects" title="Permanent link">¶</a></h1>
 <ul>
+  <li><a href="https://solr.apache.org">Apache Solr</a></li>
   <li><a href="http://hadoop.apache.org">Apache Hadoop</a></li>
   <li><a href="http://manifoldcf.apache.org/">Apache ManifoldCF</a></li>
   <li><a href="http://lucenenet.apache.org/">Apache Lucene.Net</a></li>
