--- a/themes/lucene/templates/lucene/tlp/_sidebar.html
+++ b/themes/lucene/templates/lucene/tlp/_sidebar.html
@@ -4,17 +4,10 @@
   <div class="flap bottom">Apache Lucene {{ LUCENE_LATEST_RELEASE }}</div>
 </div>
 <div class="download-desc">Apache Lucene {{ LUCENE_LATEST_RELEASE }}</div>
-<div class="button-orange">
-  <a href="{{ SITEURL }}/solr/downloads.html">Download</a>
-  <div class="flap top">Click to</div>
-  <div class="flap bottom">Apache Solr {{ LUCENE_LATEST_RELEASE }}</div>
-</div>
-<div class="download-desc">Apache Solr {{ LUCENE_LATEST_RELEASE }}</div>
 
 <h1 id="projects">Projects<a class="headerlink" href="#projects" title="Permanent link">¶</a></h1>
 <ul>
   <li><a href="{{ SITEURL }}/core/">Lucene Core (Java)</a></li>
-  <li><a href="{{ SITEURL }}/solr/">Solr</a></li>
   <li><a href="{{ SITEURL }}/pylucene/">PyLucene</a></li>
   <li><a href="{{ SITEURL }}/openrelevance/">Open Relevance (Discontinued)</a></li>
 </ul>
@@ -47,6 +40,7 @@
 
 <h1 id="related-projects">Related Projects<a class="headerlink" href="#related-projects" title="Permanent link">¶</a></h1>
 <ul>
+  <li><a href="https://solr.apache.org">Apache Solr</a></li>
   <li><a href="http://hadoop.apache.org">Apache Hadoop</a></li>
   <li><a href="http://manifoldcf.apache.org/">Apache ManifoldCF</a></li>
   <li><a href="http://lucenenet.apache.org/">Apache Lucene.Net</a></li>
