Remove Solr from banner/slider

--- a/themes/lucene/templates/lucene/tlp/_slides.html
+++ b/themes/lucene/templates/lucene/tlp/_slides.html
@@ -1,12 +1,13 @@
 <div id="slide1" >
   <div class="callout">
-    Ultra-fast Search Library and Server<br/>
+    Ultra-fast Search Library<br/>
   </div>
   <div class="descwrapper"><div class="description">
-      Apache Lucene and Solr set the standard for search and indexing performance
+      Apache Lucene set the standard for search and indexing performance.
+      Lucene is the search core of both Apache Solr<span style="vertical-align: super; font-size: xx-small">TM</span> and Elasticsearch<span style="vertical-align: super; font-size: xx-small">TM</span>.
     </div></div>
     <div class="mantle">
-      <img alt="Apache Lucene" src="{{ SITEURL }}/theme/images/lucene/tlp/mantle-lucene-solr.png"/>
+      <img alt="Apache Lucene" src="{{ SITEURL }}/theme/images/lucene/tlp/mantle-lucene.png"/>
     </div>
 </div>
 <div id="slide2" style="display:none">
@@ -26,7 +27,7 @@
     Large, Vibrant community
   </div>
   <div class="descwrapper"><div class="description">
-      The goal of Apache Lucene and Solr is to provide world class search capabilities
+      The goal of Apache Lucene is to provide world class search capabilities
     </div></div>
     <div class="mantle">
       <img alt="Apache Mahout community" src="{{ SITEURL }}/theme/images/lucene/tlp/mantle-community.png"/>
@@ -37,7 +38,7 @@
     Apache 2.0 licensed
   </div>
   <div class="descwrapper"><div class="description">
-      Apache Lucene and Solr are distributed under a commercially friendly Apache Software license
+      Apache Lucene is distributed under a commercially friendly Apache Software license
     </div></div>
     <div class="mantle">
       <img alt="Apache Software Foundation" src="{{ SITEURL }}/theme/images/lucene/mantle-asf.png"/>
