--- a/themes/lucene/templates/lucene/base.html
+++ b/themes/lucene/templates/lucene/base.html
@@ -24,7 +24,9 @@
           <div style="position:absolute;right:100px;top:10px;"><span style="vertical-align: super; font-size: xx-small">TM</span></div>
           {% endblock %}
         </div>
+<!-- TODO: Search disabled as it does not work, 2021-02-21
         {% include "lucene/_search.html" %}
+-->
         <div id="nav">
           <ul>
             {% block nav_items %}
