--- a/themes/lucene/templates/lucene/tlp/index.html
+++ b/themes/lucene/templates/lucene/tlp/index.html
@@ -27,12 +27,15 @@
 </div>
 <br clear="all"/>
 <hr/>
-<br clear="all"/>
 <div>
   <p>
-    <img src="/theme/images/solr/Solr_Logo_200x101.png" width="100" alt="Solr Logo" align="left" />
-    The <a href="https://solr.apache.org/">Solr<span style="vertical-align: super; font-size: xx-small">TM</span></a>
-    sub project was a part of Lucene TLP until February 2021. All things Solr have now moved to <a href="https://solr.apache.org/">https://solr.apache.org/</a>
+    <a href="https://solr.apache.org/">
+      <img src="/theme/images/solr/Solr_Logo_200x101.png" width="100" alt="Solr Logo" align="left" class="solrlogo" />
+    </a>
+    <b>ANNOUNCEMENT:</b> The <a href="https://solr.apache.org/">Solr<span style="vertical-align: super; font-size: xx-small">TM</span></a>
+    sub project has graduated to a separate Top Level Project (TLP). All things Solr have now moved to
+    <a href="https://solr.apache.org/">https://solr.apache.org/</a>. Mailing lists and git repositories have changed,
+    please see details on the Solr website.
   </p>
 </div>
 <br clear="all"/>
