--- a/themes/solr/templates/_modal_welcomebox.html
+++ b/themes/solr/templates/_modal_welcomebox.html
@@ -21,7 +21,7 @@
           <div class="break"></div>
           <div>
             Solr is now an independent Apache project here at <b>solr.apache.org</b>.
-            Please update your links. <a href="/news.html#apache-solr-becomes-an-apache-tlp">Read more about what it means for you</a>.
+            Please update your links. <a href="/news.html#apache-solr-becomes-an-apache-tlp" id="news-link">Read more about what it means for you</a>.
           </div>
         </div>
       </div>
@@ -66,8 +66,14 @@
   var modal = document.querySelector("#modal");
   var modalOverlay = document.querySelector("#modal-overlay");
   var closeButton = document.querySelector("#close-button");
+  var linkText = document.querySelector("#news-link");
 
   closeButton.addEventListener("click", function() {
+    modal.classList.toggle("closed");
+    modalOverlay.classList.toggle("closed");
+  });
+
+  linkText.addEventListener("click", function() {
     modal.classList.toggle("closed");
     modalOverlay.classList.toggle("closed");
   });
