--- a/themes/solr/templates/news.html
+++ b/themes/solr/templates/news.html
@@ -13,6 +13,10 @@
     h2:hover > .headerlink, h3:hover > .headerlink, h1:hover > .headerlink, h6:hover > .headerlink, h4:hover > .headerlink, h5:hover > .headerlink, dt:hover > .elementid-permalink {
       visibility: visible;
     }
+    html {
+      --top-spacing: 70px;
+      scroll-padding-top: var(--top-spacing);
+    }
   </style>
   <h1 id="solr-news">Solr<sup>™</sup> News<a class="headerlink" href="#solr-news" title="Permanent link">¶</a></h1>
   {{page.content}}
