"have can now" --> "can now"

--- a/themes/lucene/templates/lucene/tlp/index.html
+++ b/themes/lucene/templates/lucene/tlp/index.html
@@ -33,7 +33,7 @@
       <img src="/theme/images/solr/Solr_Logo_200x101.png" width="100" alt="Solr Logo" align="left" class="solrlogo" />
     </a>
     <b>ANNOUNCEMENT:</b> The <a href="https://solr.apache.org/">Solr<span style="vertical-align: super; font-size: xx-small">TM</span></a>
-    sub project has moved to a separate Top Level Project (TLP). All things Solr have can now be found at
+    sub project has moved to a separate Top Level Project (TLP). All things Solr can now be found at
     <a href="https://solr.apache.org/">https://solr.apache.org/</a>. Mailing lists and git repositories have changed,
     please see details on the Solr website.
   </p>
