Add a new Code of Conduct page

--- a/themes/lucene/templates/lucene/tlp/_sidebar.html
+++ b/themes/lucene/templates/lucene/tlp/_sidebar.html
@@ -17,6 +17,7 @@
   <li><a href="https://www.apache.org/licenses/">License</a></li>
   <li><a href="{{ SITEURL }}/whoweare.html">Who We are</a></li>
   <li><a href="{{ SITEURL }}/news.html">TLP News</a></li>
+  <li><a href="{{ SITEURL }}/code-of-conduct.html">Code of Conduct</a></li>
 </ul>
 
 <h1 id="events">Events<a class="headerlink" href="#events" title="Permanent link">¶</a></h1>
