--- a/themes/lucene/templates/lucene/core/_slides.html
+++ b/themes/lucene/templates/lucene/core/_slides.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="mantle">
-    <img alt="Apache Lucene" src="{{ SITEURL }}/theme/images/lucene/core/mantle-lucene.png"/>
+    <img alt="Apache Lucene" src="{{ SITEURL }}/theme/images/lucene/core/mantle-lucene.png{{ STATIC_RESOURCE_SUFFIX }}"/>
   </div>
 </div>
 <div id="slide2" style="display:none">
@@ -21,7 +21,7 @@
     </div>
   </div>
   <div class="mantle">
-    <img alt="Lucene Power" src="{{ SITEURL }}/theme/images/lucene/mantle-power.png"/>
+    <img alt="Lucene Power" src="{{ SITEURL }}/theme/images/lucene/mantle-power.png{{ STATIC_RESOURCE_SUFFIX }}"/>
   </div>
 </div>
 <div id="slide3" style="display:none">
@@ -34,7 +34,7 @@
     </div>
   </div>
   <div class="mantle">
-    <img alt="Apache Lucene" src="{{ SITEURL }}/theme/images/lucene/core/mantle-innovation.png"/>
+    <img alt="Apache Lucene" src="{{ SITEURL }}/theme/images/lucene/core/mantle-innovation.png{{ STATIC_RESOURCE_SUFFIX }}"/>
   </div>
 </div>
 <div id="slide4" style="display:none">
@@ -47,6 +47,6 @@
     </div>
   </div>
   <div class="mantle">
-    <img alt="Apache Software Foundation" src="{{ SITEURL }}/theme/images/lucene/mantle-asf.png"/>
+    <img alt="Apache Software Foundation" src="{{ SITEURL }}/theme/images/lucene/mantle-asf.png{{ STATIC_RESOURCE_SUFFIX }}"/>
   </div>
 </div>
