--- a/themes/lucene/templates/lucene/tlp/index.html
+++ b/themes/lucene/templates/lucene/tlp/index.html
@@ -30,7 +30,7 @@
 <div>
   <p>
     <a href="https://solr.apache.org/">
-      <img src="/theme/images/solr/Solr_Logo_200x101.png" width="100" alt="Solr Logo" align="left" class="solrlogo" />
+      <img src="/theme/images/solr/Solr_Logo_200x101.png{{ STATIC_RESOURCE_SUFFIX }}" width="100" alt="Solr Logo" align="left" class="solrlogo" />
     </a>
     <b>ANNOUNCEMENT:</b> The <a href="https://solr.apache.org/">Solr<span style="vertical-align: super; font-size: xx-small">TM</span></a>
     sub project has moved to a separate Top Level Project (TLP). All things Solr can now be found at
