--- a/themes/lucene/templates/lucene/tlp/_slides.html
+++ b/themes/lucene/templates/lucene/tlp/_slides.html
@@ -7,7 +7,7 @@
       Lucene is the search core of both Apache Solr<span style="vertical-align: super; font-size: xx-small">TM</span> and Elasticsearch<span style="vertical-align: super; font-size: xx-small">TM</span>.
     </div></div>
     <div class="mantle">
-      <img alt="Apache Lucene" src="{{ SITEURL }}/theme/images/lucene/tlp/mantle-lucene.png"/>
+      <img alt="Apache Lucene" src="{{ SITEURL }}/theme/images/lucene/tlp/mantle-lucene.png{{ STATIC_RESOURCE_SUFFIX }}"/>
     </div>
 </div>
 <div id="slide2" style="display:none">
@@ -19,7 +19,7 @@
       from mobile devices to sites like Twitter, Apple and Wikipedia.
     </div></div>
     <div class="mantle">
-      <img alt="Lucene Power" src="{{ SITEURL }}/theme/images/lucene/mantle-power.png"/>
+      <img alt="Lucene Power" src="{{ SITEURL }}/theme/images/lucene/mantle-power.png{{ STATIC_RESOURCE_SUFFIX }}"/>
     </div>
 </div>
 <div id="slide3" style="display:none">
@@ -30,7 +30,7 @@
       The goal of Apache Lucene is to provide world class search capabilities
     </div></div>
     <div class="mantle">
-      <img alt="Apache Mahout community" src="{{ SITEURL }}/theme/images/lucene/tlp/mantle-community.png"/>
+      <img alt="Apache Mahout community" src="{{ SITEURL }}/theme/images/lucene/tlp/mantle-community.png{{ STATIC_RESOURCE_SUFFIX }}"/>
     </div>
 </div>
 <div id="slide4" style="display:none">
@@ -41,6 +41,6 @@
       Apache Lucene is distributed under a commercially friendly Apache Software license
     </div></div>
     <div class="mantle">
-      <img alt="Apache Software Foundation" src="{{ SITEURL }}/theme/images/lucene/mantle-asf.png"/>
+      <img alt="Apache Software Foundation" src="{{ SITEURL }}/theme/images/lucene/mantle-asf.png{{ STATIC_RESOURCE_SUFFIX }}"/>
     </div>
 </div>
