LUCENE-9802: fix og:image and provide separate secure_url
The og:image should be http, with a separate tag for secure url

--- a/themes/lucene/templates/lucene/base.html
+++ b/themes/lucene/templates/lucene/base.html
@@ -9,7 +9,8 @@
        open source"/>{% endblock %}
     {% block ogmeta %}
     <meta name="og:title" content="{{ page.title }}"/>
-    <meta name="og:image" content="https://lucene.apache.org/theme/images/lucene/core/mantle-innovation.png{{ STATIC_RESOURCE_SUFFIX }}"/>
+    <meta name="og:image" content="http://lucene.apache.org/theme/images/lucene/core/mantle-innovation.png{{ STATIC_RESOURCE_SUFFIX }}"/>
+    <meta name="og:image:secure_url" content="https://lucene.apache.org/theme/images/lucene/core/mantle-innovation.png{{ STATIC_RESOURCE_SUFFIX }}"/>
     {% endblock %}
     {% block favicon %}<link rel="shortcut icon" type="image/png"
                                                  href="{{ SITEURL }}/theme/images/lucene/lucene-favicon.png{{ STATIC_RESOURCE_SUFFIX }}"/>{% endblock %}
