Fix remaining trademark symbols on the website

--- a/themes/lucene/templates/lucene/tlp/_slides.html
+++ b/themes/lucene/templates/lucene/tlp/_slides.html
@@ -4,7 +4,7 @@
   </div>
   <div class="descwrapper"><div class="description">
       Apache Lucene set the standard for search and indexing performance.
-      Lucene is the search core of both Apache Solr<span style="vertical-align: super; font-size: xx-small">TM</span> and Elasticsearch<span style="vertical-align: super; font-size: xx-small">TM</span>.
+      Lucene is the search core of both Apache Solr™ and Elasticsearch™.
     </div></div>
     <div class="mantle">
       <img alt="Apache Lucene" src="{{ SITEURL }}/theme/images/lucene/tlp/mantle-lucene.png{{ STATIC_RESOURCE_SUFFIX }}"/>
