--- a/themes/lucene/templates/lucene/tlp/index.html
+++ b/themes/lucene/templates/lucene/tlp/index.html
@@ -4,8 +4,8 @@
 {{ super() }}
 
 <p>
-  The Apache Lucene<span style="vertical-align: super; font-size: xx-small">TM</span> project develops open-source search
-  software. The project releases a core search library, named Lucene<span style="vertical-align: super; font-size: xx-small">TM</span> core,
+  The Apache Lucene™ project develops open-source search
+  software. The project releases a core search library, named Lucene™ core,
   as well as PyLucene, a python binding for Lucene.
 </p>
 
@@ -32,7 +32,7 @@
     <a href="https://solr.apache.org/">
       <img src="/theme/images/solr/Solr_Logo_200x101.png{{ STATIC_RESOURCE_SUFFIX }}" width="100" alt="Solr Logo" align="left" class="solrlogo" />
     </a>
-    <b>ANNOUNCEMENT:</b> The <a href="https://solr.apache.org/">Solr<span style="vertical-align: super; font-size: xx-small">TM</span></a>
+    <b>ANNOUNCEMENT:</b> The <a href="https://solr.apache.org/">Solr™</a>
     sub project has moved to a separate Top Level Project (TLP). All things Solr can now be found at
     <a href="https://solr.apache.org/">https://solr.apache.org/</a>. Mailing lists and git repositories have changed,
     please see details on the Solr website.
