Update ASF banner style

--- a/themes/lucene/templates/lucene/_javascript.html
+++ b/themes/lucene/templates/lucene/_javascript.html
@@ -1,3 +1,4 @@
 <script type="text/javascript" src="{{ SITEURL }}/theme/javascript/lucene/prototype.js{{ STATIC_RESOURCE_SUFFIX }}"></script>
 <script type="text/javascript" src="{{ SITEURL }}/theme/javascript/lucene/effects.js{{ STATIC_RESOURCE_SUFFIX }}"></script>
 <script type="text/javascript" src="{{ SITEURL }}/theme/javascript/lucene/slides.js{{ STATIC_RESOURCE_SUFFIX }}"></script>
+<script src="https://www.apachecon.com/event-images/snippet.js"></script>
