--- a/themes/lucene/templates/lucene/tlp/_sidebar.html
+++ b/themes/lucene/templates/lucene/tlp/_sidebar.html
@@ -22,7 +22,7 @@
 
 <h1 id="events">Events<a class="headerlink" href="#events" title="Permanent link">¶</a></h1>
 <ul>
-  <li><a href="https://www.apache.org/events/current-event.html" target="_blank"><img src="https://www.apache.org/events/current-event-125x125.png"></a></li>
+  <a class="acevent" data-format="square" data-mode="light" data-width="160" data-style="border: 1px solid lightgrey"></a>
 </ul>
 
 <h1 id="asf-links">ASF links<a class="headerlink" href="#asf-links" title="Permanent link">¶</a></h1>
