Updated the event banner on the sub sites as well

--- a/themes/lucene/templates/lucene/core/_sidebar.html
+++ b/themes/lucene/templates/lucene/core/_sidebar.html
@@ -29,7 +29,7 @@
 
 <h1 id="events">Events</h1>
 <ul>
-  <li><a href="https://www.apache.org/events/current-event.html" target="_blank"><img src="https://www.apache.org/events/current-event-125x125.png"></a></li>
+  <a class="acevent" data-format="square" data-mode="light" data-width="160" data-style="border: 1px solid lightgrey"></a>
 </ul>
 
 <h1 id="asf-links">ASF links</h1>
