--- a/themes/lucene/templates/lucene/core/page.html
+++ b/themes/lucene/templates/lucene/core/page.html
@@ -13,7 +13,7 @@
 <li><a href="{{ SITEURL}}/core/discussion.html">Mailing Lists</a></li>
 <li><a href="{{ SITEURL}}/core/documentation.html">Documentation</a></li>
 <li><a href="{{ SITEURL}}/core/quickstart.html">Tutorials</a></li>
-<li><a href="https://issues.apache.org/jira/browse/LUCENE">Issue Tracker</a></li>
+<li><a href="https://github.com/apache/lucene/issues">Issue Tracker</a></li>
 <li><a class="last" href="{{ SITEURL }}/">Lucene TLP</a></li>
 {% endblock %}
 
