Add OpenSearch to site description - slides
Signed-off-by: Freedain <kris@freedain.com>

--- a/themes/lucene/templates/lucene/tlp/_slides.html
+++ b/themes/lucene/templates/lucene/tlp/_slides.html
@@ -4,7 +4,7 @@
   </div>
   <div class="descwrapper"><div class="description">
       Apache Lucene set the standard for search and indexing performance.
-      Lucene is the search core of both Apache Solr™ and Elasticsearch™.
+      Lucene is the search of Apache Solr™, Elasticsearch™, and OpenSearch.
     </div></div>
     <div class="mantle">
       <img alt="Apache Lucene" src="{{ SITEURL }}/theme/images/lucene/tlp/mantle-lucene.png{{ STATIC_RESOURCE_SUFFIX }}"/>
